<resources>
    <string name="app_name">Pengguna</string>
    <string name="action_settings">Settings</string>
    <string name="butuh_juru_las">Butuh Juru Las</string>
    <string name="proyek_konstruksi">Proyek Konstruksi</string>
    <string name="jenis_proyek">Jenis Proyek</string>
    <string name="steel_structure">Steel Structure</string>
    <string name="perpipaan">Perpipaan</string>
    <string name="las_umum">Las Umum</string>
    <string name="konstruksi_maritim">Konstruksi Maritim</string>
    <string name="industri_manufacture">Industri Manufacture</string>
    <string name="jembatan">Jembatan</string>
    <string name="pabrik">Pabrik</string>
    <string name="gudang_bangunan">Gudang, Bangunan</string>
    <string name="welder">Welder</string>
    <string name="kapal">Kapal</string>
    <string name="offshore_onshore">Offshore/Onshore</string>
    <string name="kapal_ferro">Kapal Ferro</string>
    <string name="kapal_non_ferro">Kapal Aluminium</string>
    <string name="stainless_steel">Stainless Steel</string>
    <string name="carbon_steel">Carbon Steel</string>
    <string name="storage_tank">Storage Tank</string>
    <string name="pressure_tank">Pressure Tank</string>
    <string name="smaw">SMAW</string>
    <string name="fcaw">FCAW</string>
    <string name="gtaw">GTAW</string>
    <string name="smaw_gtaw">SMAW/GTAW</string>
    <string name="smaw_fcaw">SMAW/FCAW</string>
    <string name="non_ferro">Non Ferro</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="punya_akun">Punya Akun</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="name">Name</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="daftar">Daftar</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log Out</string>
    <string name="posisi_1g_2g_pelat_profil">Posisi 1G, 2G (pelat/profil)</string>
    <string name="_0">0</string>
    <string name="posisi_1g_2g_3g_4g_pelat_profil">Posisi 1G, 2G, 3G, 4G (pelat/profil)</string>
    <string name="posisi_1g_2g_3g_4g_pelat_nposisi_1g_2g_5g_6g_pipa">Posisi 1G, 2G, 3G, 4G (pelat) Posisi 1G, 2G, 5G, 6G (pipa)</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="sub">sub</string>
    <string name="add">add</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="rp">Rp</string>
    <string name="todo">TODO</string>
    <string name="kembali">Kembali</string>
    <string name="title_activity_maps">Map</string>
</resources>
